--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
     "com.ptc.vuforia.engine": "8.3.9",
+    "com.unity.ads": "2.3.1",
+    "com.unity.analytics": "3.2.2",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.1.0",
     "com.unity.ide.vscode": "1.0.7",
+    "com.unity.package-manager-ui": "2.0.3",
+    "com.unity.purchasing": "2.0.3",
     "com.unity.render-pipelines.core": "7.1.2",
     "com.unity.render-pipelines.lightweight": "7.1.2",
     "com.unity.shadergraph": "7.1.2",
