Interaction and Animation Update
Added interactable hardiness map, fixed scaling issue, added rotate lock, added visible toggle select, and fixed panel animation glitch. Molecules and protines not included as the commit was too large with them included. (This includes both models and prefabs)

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Assets\_Project\Scripts\Rotate.cs" />
     <Compile Include="Assets\_Project\Scripts\SwitchSprite.cs" />
     <Compile Include="Assets\_Project\Scripts\ToggleCamera.cs" />
+    <Compile Include="Assets\_Project\Scripts\ToggleVisible.cs" />
     <Compile Include="Assets\_Project\Scripts\TrackableTest.cs" />
     <Compile Include="Assets\_Project\Scripts\Tutorial.cs" />
     <Compile Include="Assets\_Project\Scripts\UIManager.cs" />
